--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
-  background-color: #444444;
-  color: #dddddd;
-  font-family: Arial, Helvetica, sans-serif;
-   Margin: 10% 20%;
+  background-color: #bdb76b;
+  color: #000000;
+  font-family: Georgia, Times New Roman, serif;
+  Margin: 10% 20%;
 }
 
 .exp-header {
@@ -10,5 +10,5 @@ body {
   text-transform: uppercase;
   border-top: 1px solid #dddddd;
   border-bottom: 1px solid #dddddd;
-  background-color:rgba (0,0,0,0.1)
+  background-color:rgba (189,183,107)
 }
